# factual-confidence-of-llms

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dev_tools/: format.sh  lint.sh  test.sh
scripts/: extract_hidden.sh  main.sh  main_pik_lama.sh  main_pop.sh  main_translated.sh  sampling.sh  sampling_popqa.sh  sf.sh
src/self_knowledge/: arch.py  deepspeed_config.json  main.py  prompts.yaml  slot_filling.py  translate_dataset.py
src/self_knowledge/data_gen/: dataset_prep.py  openai_sampler.py  popqa_cleanup.py  sampling.py  sentence_extractors.py  sf_graph_cleanup.py
src/self_knowledge/data_gen/paraphrase/: cleanup_paraphrase.py  gen_paraphrasing.py  nli.py
src/self_knowledge/evaluation/: consistency_utils.py  extract_hidden_layers.py  logit_scorer_utils.py  score_functions.py  train_scorer.py  trainable_scorer_classes.py  verbalized_utils.py
src/self_knowledge/evaluation/api_example/: openai_surrogate.py  openai_verbalized.py
src/self_knowledge/graphing/: auprc_paraph.py  consistency_analysis.py  draw_graphs.py  graph_utils.py  paraph_graph_utils.py
