[tool.poetry]
name = "self-knowledge"
version = "0.1.0"
description = "Factual Confidence of LLMs: on Reliability and Robustness of Current Estimators"
authors = ["Mateo Mahaut", "Laura Aina", "Paula Czarnowska", "Momchil Hardalov", "Thomas Müller", "Lluís Màrquez"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.34.0"
torch = { version = "^2.0.1", source = "torch" }
datasets = "^2.14.5"
word2num = "^0.1.1"
typer = "^0.9.0"
numpy = "^1.2"
scikit-learn = "^1.3.1"
accelerate = "^0.23.0"
deepspeed = "^0.11.1"
sentencepiece = "^0.1.99"
word2number = "^1.1"
seaborn = "^0.13.0"
pandas = "^2.1.4"
protobuf = "^4.25.1"
spacy = "^3.7.2"
torcheval = "^0.0.7"
openai = "^1.6.1"
boto3 = "^1.34.15"
bitsandbytes = "^0.42.0"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
isort = "^5.12.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
matplotlib = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"
